# cosemlib

./: .gitignore  .gitmodules  CMakeLists.txt
share/serial/: serial.c
src/: csm_association.h
